Fix spacing issue when pen and trash present

--- a/frontend/src/components/reviews/reviews_index_item.css
+++ b/frontend/src/components/reviews/reviews_index_item.css
@@ -127,4 +127,5 @@ li {
 
 .review-item-actions{
     display: flex;
+    height: 15px;
 }
